# rocket_dyn_template-example

./: Cargo.toml
src/: main.rs
templates/: index.html.hbs
