[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars", "tera", "minijinja"]

[dependencies]
rocket = "0.5.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
